Require redirect_uri param and pass it in RequestUserAccessToken
